polyglot-core/src/test/resources/grammars/positive/test-allowmasking.polyglot
Package org.anarres.polyglot.test.allowmasking;

Tokens

	tok_a = 'a' ;
	@LexerAllowMasking
	tok_b = 'a' ;

