polyglot-core/src/test/resources/grammars/negative/test-multianon.polyglot
Package foo;

Tokens
	tok_a = 'a' ;

Abstract Syntax Tree
	foo =
		tok_a |
		tok_a ;
		
